syntax = "proto3";
package example;

message IntMsg {
  int64 IntValue = 1;
  int64 IntMultiple = 2;
  int64 IntCalc = 3;
}

service BiDirectional {
  rpc Multiple(stream IntMsg) returns (stream IntMsg) {}
}